Fix word-wrapping issue

--- a/src/components/BlogDetailPage/blog-detail.scss
+++ b/src/components/BlogDetailPage/blog-detail.scss
@@ -18,6 +18,10 @@
         }
     }
 
+    h1 {
+        word-wrap: break-word;
+    }
+
     h1,
     h2,
     h3,
